# samokat-parser

./: .env_demo  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
demo_scr/demo_scr/: items.py  middlewares.py  pipelines.py  settings.py
demo_scr/demo_scr/spiders/: samokat_spider.py
